tests/ui/future/get_with_non_send_future.stderr
error: future cannot be sent between threads safely
  --> $DIR/get_with_non_send_future.rs:15:10
   |
15 |         .get_or_insert_with(0, async move {
   |          ^^^^^^^^^^^^^^^^^^ future created by async block is not `Send`
   |
   = help: within `impl Future`, the trait `Send` is not implemented for `Rc<String>`
note: captured value is not `Send`
  --> $DIR/get_with_non_send_future.rs:19:13
   |
19 |             data1.to_string()
   |             ^^^^^ has type `Rc<String>` which is not `Send`
